# aiear_ws

./: .gitignore  README.md  frames_2026-05-09_01.44.41.gv  frames_2026-05-09_01.59.30.gv
.claude/: settings.local.json
src/aiear_hardware/: CMakeLists.txt  aiear_hardware.xml  package.xml
src/aiear_hardware/include/aiear_hardware/: aiear_system.hpp
src/aiear_hardware/src/: aiear_system.cpp
src/aiear_robot/: CMakeLists.txt  package.xml
src/aiear_robot/config/: aiear_controllers.yaml  aiear_nav2.yaml  aiear_slam.yaml  my_controllers.yaml  twist_mux_config.yaml
src/aiear_robot/launch/: aiear_bringup.launch.py  aiear_nav2.launch.py  aiear_sim.launch.py  aiear_slam.launch.py  gazebo_model.launch.py  sample-minimal.launch.py
src/aiear_robot/maps/: aiear_map_last_floor_hall.pgm  aiear_map_last_floor_hall.yaml
src/aiear_robot/model/: robot.gazebo  robot.xacro  robot_extracted.urdf  ros2_control.xacro  temp.urdf
src/aiear_robot/parameters/: bridge_parameters.yaml
src/aiear_robot/urdf/: aiear.urdf.xacro  aiear.xacro  aiear_bright.urdf.xacro  gazebo_control.xacro  robot_sensor_physics.gazebo  temp.urdf
